--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Hanes BAME</title>
+    <title>Our Welsh History</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
